--- a/Tasks2020.ipynb
+++ b/Tasks2020.ipynb
@@ -243,6 +243,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br/>\n",
+    "<br/>\n",
+    "\n",
+    "## Task 2 - Chi-Squared\n",
+    "\n",
+    "The Chi-squared test for independence is a statistical hypothesis test like a t-test. It is used to analyse whether two categorical variables are independent. The Wikipedia article gives the table below as an example [4], stating the Chi-squared value based on it is approximately 24.6. Use scipy.stats to verify this value and calculate the associated p value. You should include a short note with references justifying your analysis in a markdown cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Many test statistics are approximately distributed as Chi Square. Two of the more common tests using the Chi Square distribution are the test of independence for data and the goodness of fit for a model. The Chi-Square test of independence is used to determine if there is a significant relationship between two nominal (categorical) variables and the goodness of fit test measures whether there is a difference between the experimental (observed) value and the theoretical (expected) value[1] Chi Square distribution is used as a basis to verify the hypothesis. It has two parameters:\n",
+    "\n",
+    "df - degree of freedom\n",
+    "size - Shape of returned array\n",
+    "\n",
+    "When df independent random variables, each with standard normal distributions (mean 0, variance 1), are squared and summed, the resulting distribution is chi-square.[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2 Stat: 24.5712028585826\n",
+      "\n",
+      "P-Value: 0.0004098425861096696\n",
+      "\n",
+      "Degrees of Freedom: 6\n",
+      "\n",
+      "Contingency Table:\n",
+      " [[ 80.53846154  80.53846154 107.38461538  80.53846154]\n",
+      " [ 34.84615385  34.84615385  46.46153846  34.84615385]\n",
+      " [ 34.61538462  34.61538462  46.15384615  34.61538462]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify this value and calculate the associated p value [3]\n",
+    "\n",
+    "# import packages\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "# create data\n",
+    "white_collar = [90, 60, 104, 95]\n",
+    "blue_collar = [30, 50, 51, 20]\n",
+    "no_collar = [30, 40, 45, 35]\n",
+    "\n",
+    "data = np.array([white_collar, blue_collar, no_collar])\n",
+    "\n",
+    "chi2_stat, p_val, dof, ex = stats.chi2_contingency(data)\n",
+    "\n",
+    "print(f\"Chi2 Stat: {chi2_stat}\\n\")\n",
+    "print(f\"P-Value: {p_val}\\n\")\n",
+    "print(f\"Degrees of Freedom: {dof}\\n\")\n",
+    "print(f\"Contingency Table:\\n {ex}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ref:\n",
+    "\n",
+    "[1] http://onlinestatbook.com/2/chi_square/distribution.html\n",
+    "\n",
+    "[2]  https://docs.scipy.org/doc/numpy-1.15.0/reference/generated/numpy.random.chisquare.html#numpy.random.chisquare\n",
+    "\n",
+    "[3] https://towardsdatascience.com/running-chi-square-tests-in-python-with-die-roll-data-b9903817c51b"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
