--- a/Tasks2020.ipynb
+++ b/Tasks2020.ipynb
@@ -260,8 +260,9 @@
    "source": [
     "Many test statistics are approximately distributed as Chi Square. Two of the more common tests using the Chi Square distribution are the test of independence for data and the goodness of fit for a model. The Chi-Square test of independence is used to determine if there is a significant relationship between two nominal (categorical) variables and the goodness of fit test measures whether there is a difference between the experimental (observed) value and the theoretical (expected) value[1] Chi Square distribution is used as a basis to verify the hypothesis. It has two parameters:\n",
     "\n",
-    "df - degree of freedom\n",
-    "size - Shape of returned array\n",
+    "       * df - degree of freedom\n",
+    "    \n",
+    "       * size - Shape of returned array\n",
     "\n",
     "When df independent random variables, each with standard normal distributions (mean 0, variance 1), are squared and summed, the resulting distribution is chi-square.[2]"
    ]
@@ -295,7 +296,7 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "\n",
-    "# create data\n",
+    "# create arrays to store data\n",
     "white_collar = [90, 60, 104, 95]\n",
     "blue_collar = [30, 50, 51, 20]\n",
     "no_collar = [30, 40, 45, 35]\n",
@@ -324,11 +325,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br/>\n",
+    "\n",
+    "## Task 3 - \n",
+    "\n",
+    "The standard deviation of an array of numbers x is\n",
+    "calculated using numpy as np.sqrt(np.sum((x - np.mean(x))**2)/len(x)).\n",
+    "However, Microsoft Excel has two different versions of the standard deviation\n",
+    "calculation, STDEV.P and STDEV.S . The STDEV.P function performs the above\n",
+    "calculation but in the STDEV.S calculation the division is by len(x)-1 rather\n",
+    "than len(x) . Research these Excel functions, writing a note in a Markdown cell\n",
+    "about the difference between them. Then use numpy to perform a simulation\n",
+    "demonstrating that the STDEV.S calculation is a better estimate for the standard\n",
+    "deviation of a population when performed on a sample. Note that part of this task\n",
+    "is to figure out the terminology in the previous sentence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The standard deviation is a measure of the amount of variance or dispersion of a dataset relative to its mean. It is used to evaluate how far the data is spread from the mean of the data sample and it is calculated as the square root of the variance. A high deviation within the data set means the data points are further from the mean, meaning the more spread out the data is then the higher the standard deviation. A low standard deviation indicates that the values tend to be close to the mean[1].\n",
+    "\n",
+    "STDEV.P and STDEV.S are two microsoft excel functions used to calculate the standard deviation. STDEV.P calculates the standard deviation based on the entire population given as arguments. STDEV.P assumes that its arguments are the entire population so if your data represents a sample of the population then compute the standard deviation using STDEV.S[2]. STDEV.S is used to estimate the standard deviation based on a sample of the population. For both functions arguments can be numbers, names, arrays, or references that contain numbers[3]. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "REF:\n",
+    "\n",
+    "[1]. https://www.investopedia.com/terms/s/standarddeviation.asp\n",
+    "\n",
+    "[2]. https://support.microsoft.com/en-us/office/stdev-p-function-6e917c05-31a0-496f-ade7-4f4e7462f285\n",
+    "\n",
+    "[3]. https://support.microsoft.com/en-us/office/stdev-s-function-7d69cf97-0c1f-4acf-be27-f3e83904cc23"
+   ]
   }
  ],
  "metadata": {
