Task 4 code working

--- a/Tasks2020.ipynb
+++ b/Tasks2020.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Machine Learning & Statistics\n",
+    "\n",
     "# Tasks 2020\n",
     "\n",
     "#### Damien Connolly\n",
