--- a/Tasks2020.ipynb
+++ b/Tasks2020.ipynb
@@ -8,16 +8,21 @@
     "\n",
     "# Tasks 2020\n",
     "\n",
+    "#### Lecturer: Ian McLoughlin\n",
+    "\n",
+    "\n",
     "#### Damien Connolly\n",
-    "##### G00340321"
+    "#### G00340321"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "******************************************************************************************************************************\n",
     "## Task 1 - sqrt2\n",
     "\n",
+    "#### Task\n",
     "Write a Python function called sqrt2 that calculates and prints to the screen the square root of 2 to 100 decimal places. Your code should not depend on any module from the standard library1 or otherwise. You should research the task first and include references and a description of your algorithm."
    ]
   },
@@ -25,9 +30,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Solution\n",
     "A square root of a number is a value that, when multiplied by itself it gives the original number. The square root of 2 is an irrational number as it cannot be expressed as an integer divided by another interger. Rational numbers are numbers that can be seen as one integer over another. The square root of most numbers is an irrational number with an infinite decimal expansion. As a result, the decimal expansion of any square root can only be computed to finite-precision approximation[1]. Python can be used to calculate the square root of a number in several ways through the use of its many libraries. However the square root can still be calculated without using any of its imported libraries. There are many different methods of computing the square root and at its simplest the square root of 2 can be calculated as one-half to the power of 2, written in mathematics as[2]: \n",
     "                                     \n",
-    "                                     EQUATION\n"
+    "                                    \n",
+    "$$ \\sqrt{2} $$\n",
+    "***************************************************************************************************************************\n"
    ]
   },
   {
@@ -50,7 +58,6 @@
     "# Simple function to calculate the square root\n",
     "\n",
     "def sqrt(n): \n",
-    "    \n",
     "    ans = n ** (1/2)\n",
     "    return ans\n",
     "    print (\"The square root of the number is\", ans,)\n",
@@ -64,21 +71,23 @@
    "source": [
     "#### Newtons method\n",
     "\n",
-    "Newtons method, which is also known as Newton-Raphson method, is a root finding algorithm that produces successively better approximations of the roots of a real valued function. The algorithm starts with a guess and computes the sequence of improved guesses. This method is often used to quickly calculate the square root of a number but is often problematic when rounding numbers and the same algorithm will often produce two different results on different computers[3]"
+    "Newtons method, which is also known as Newton-Raphson method, is a root finding algorithm that produces successively better approximations of the roots of a real valued function. The algorithm starts with a guess and computes the sequence of improved guesses[3]. This method is often used to quickly calculate the square root of a number but is often problematic when rounding numbers and the same algorithm will often produce two different results on different computers[4].\n",
+    "\n",
+    "$$ x_{n} + 1 = \\frac{1}{2} (x_{n} + \\frac{a}{x_{n}}) $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.4142156862745099"
+       "1.4142156863"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +103,7 @@
     "        \n",
     "        z -= (z*z - x) / (2*z)\n",
     "        \n",
-    "    return (round(z, 100))\n",
+    "    return (round(z, 10))\n",
     "    \n",
     "\n",
     "newtonsmethod(2)"
@@ -106,7 +115,7 @@
    "source": [
     "#### Babylonian Method\n",
     "\n",
-    "The Babylonian method to find square root is based on the Newton- Raphson method for solving non-linear equations. The idea is simple, starting from an arbitrary value of x, and y as 1, we can simply get next approximation of root by finding the average of x and y. Then the y value will be updated with  number / x [4]. "
+    "The Babylonian method to find square root is based on the Newton- Raphson method for solving non-linear equations. The idea is simple, starting from an arbitrary value of x, and y as 1, we can simply get next approximation of root by finding the average of x and y. Then the y value will be updated with  number / x [5]. "
    ]
   },
   {
@@ -126,7 +135,7 @@
     }
    ],
    "source": [
-    "# Example using Babylonian method\n",
+    "# Example using Babylonian method [6]\n",
     "\n",
     "def BabylonianAlgorithm(number):\n",
     "    if(number == 0):\n",
@@ -148,7 +157,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both of these methods give us different results as the decimal places get larger and both functions will only allow a certain number of decimal places. We must now get the square root of 2 extended to 100 decimal places. Below is a function that will allow us to do this by calculating the square root of an integer to digits of precision. It works by finding the integer square root of a after multiplying by 10 raised to the 2 x digits. The result must be converted to a string and have the decimal point added at the correct location if it is to be displayed correctly[5]."
+    "Both of these methods give us slightly different results as the decimal places get larger and both functions will only allow a certain number of decimal places. We must now get the square root of 2 extended to 100 decimal places. \n",
+    "\n",
+    "\n",
+    "#### Calculate to 100 decimal places\n",
+    "Below is a function that will allow us to do this by calculating the square root of an integer to digits of precision. It works by finding the integer square root of a after multiplying by 10 raised to the 2 x digits. The result must be converted to a string and have the decimal point added at the correct location if it is to be displayed correctly[7]."
    ]
   },
   {
@@ -165,7 +178,7 @@
     }
    ],
    "source": [
-    "# Function that calculates and prints to the screen the square root of 2 to 100 decimal places [5].  \n",
+    "# Function that calculates and prints to the screen the square root of 2 to 100 decimal places [7].  \n",
     "\n",
     "def sqrt2(a, digits):\n",
     "    a = a * (10**(2*digits))\n",
@@ -219,72 +232,186 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ref:\n",
+    "#### References:\n",
     "\n",
-    "[1] https://en.wikipedia.org/wiki/Methods_of_computing_square_roots\n",
+    "[1]. https://en.wikipedia.org/wiki/Methods_of_computing_square_roots\n",
     "\n",
+    "[2]. https://math.mit.edu/~stevenj/18.335/newton-sqrt.pdf\n",
     "\n",
-    "[2] https://en.wikipedia.org/wiki/Square_root_of_2\n",
+    "[3]. https://en.wikipedia.org/wiki/Square_root_of_2\n",
     "\n",
-    "[3] https://www.math.ubc.ca/~pwalls/math-python/roots-optimization/newton/\n",
+    "[4]. https://www.math.ubc.ca/~pwalls/math-python/roots-optimization/newton/\n",
     "\n",
-    "[4]. https://www.tutorialspoint.com/Babylonian-method-to-find-the-square-root\n",
+    "[5]. https://www.tutorialspoint.com/Babylonian-method-to-find-the-square-root\n",
     "\n",
-    "[5]. https://stackoverflow.com/questions/5187664/generating-digits-of-square-root-of-2/5189881#5189881\n",
+    "[6]. https://www.w3resource.com/python-exercises/math/python-math-exercise-18.php\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "https://tour.golang.org/flowcontrol/8\n",
-    "https://www.knowledgehut.com/blog/programming/python-rounding-numbers\n",
-    "https://en.wikipedia.org/wiki/Newton%27s_method\n",
-    "https://www.w3resource.com/python-exercises/math/python-math-exercise-18.php - Babylonian method\n",
-    "https://www.w3resource.com/python-exercises/math/index.php - B.method"
+    "[7]. https://stackoverflow.com/questions/5187664/generating-digits-of-square-root-of-2/5189881#5189881\n",
+    "****************************************************************************************************************************"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br/>\n",
     "<br/>\n",
     "\n",
     "## Task 2 - Chi-Squared\n",
     "\n",
-    "The Chi-squared test for independence is a statistical hypothesis test like a t-test. It is used to analyse whether two categorical variables are independent. The Wikipedia article gives the table below as an example [4], stating the Chi-squared value based on it is approximately 24.6. Use scipy.stats to verify this value and calculate the associated p value. You should include a short note with references justifying your analysis in a markdown cell."
+    "#### Task\n",
+    "The Chi-squared test for independence is a statistical hypothesis test like a t-test. It is used to analyse whether two categorical variables are independent. The Wikipedia article gives the table below as an example [4], stating the Chi-squared value based on it is approximately 24.6. Use scipy.stats to verify this value and calculate the associated p value. You should include a short note with references justifying your analysis in a markdown cell.\n",
+    "\n",
+    "\n",
+    "|             |  A  |   B |   C |   D | Total|\n",
+    "|------------ | --- | --- | --- | --- | -----|\n",
+    "|White collar |  90 |  60 | 104 |  95 |   349| \n",
+    "|Blue collar  |  30 |  50 |  51 |  20 |   151| \n",
+    "|No collar    |  30 |  40 |  45 |  35 |   150| \n",
+    "|Total        | 150 | 150 | 200 | 150 |   650|"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many test statistics are approximately distributed as Chi Square. Two of the more common tests using the Chi Square distribution are the test of independence for data and the goodness of fit for a model. The Chi-Square test of independence is used to determine if there is a significant relationship between two nominal (categorical) variables and the goodness of fit test measures whether there is a difference between the experimental (observed) value and the theoretical (expected) value[1] Chi Square distribution is used as a basis to verify the hypothesis. It has two parameters:\n",
+    "#### Solution\n",
+    "Many test statistics are approximately distributed as Chi Square. Two of the more common tests using the Chi Square distribution are the test of independence for data and the goodness of fit for a model. The Chi-Square test of independence is used to determine if there is a significant relationship between two nominal (categorical) variables and the goodness of fit test measures whether there is a difference between the experimental (observed) value and the theoretical (expected) value[1]. Chi Square distribution is used as a basis to verify the hypothesis. It has two parameters:\n",
     "\n",
-    "       * df - degree of freedom\n",
+    "   * df - degree of freedom\n",
+    "   \n",
     "    \n",
-    "       * size - Shape of returned array\n",
+    "   * size - Shape of returned array\n",
     "\n",
     "When df independent random variables, each with standard normal distributions (mean 0, variance 1), are squared and summed, the resulting distribution is chi-square.[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>White Collar</th>\n",
+       "      <td>90</td>\n",
+       "      <td>60</td>\n",
+       "      <td>104</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Blue Collar</th>\n",
+       "      <td>30</td>\n",
+       "      <td>50</td>\n",
+       "      <td>51</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>No Collar</th>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               A   B    C   D\n",
+       "White Collar  90  60  104  95\n",
+       "Blue Collar   30  50   51  20\n",
+       "No Collar     30  40   45  35"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import libraries\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create a data frame  and display table [3]\n",
+    "data = np.array([[90, 60, 104, 95], [30, 50, 51, 20], [30, 40, 45, 35]])\n",
+    "\n",
+    "df = pd.DataFrame(data, index=[\"White Collar\", \"Blue Collar\", \"No Collar\"], columns=[\"A\", \"B\", \"C\", \"D\"])          \n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24.5712028585826,\n",
+       " 0.0004098425861096696,\n",
+       " 6,\n",
+       " array([[ 80.53846154,  80.53846154, 107.38461538,  80.53846154],\n",
+       "        [ 34.84615385,  34.84615385,  46.46153846,  34.84615385],\n",
+       "        [ 34.61538462,  34.61538462,  46.15384615,  34.61538462]]))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The Chi-squared value based on it is approximately 24.6. Verify this value and calculate the associated p value\n",
+    "# Run the Chi2 test \n",
+    "chi2_test = stats.chi2_contingency(df)\n",
+    "chi2_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chi2 Stat: 24.5712028585826\n",
+      "===Chi2 Stat===: 24.5712028585826\n",
       "\n",
-      "P-Value: 0.0004098425861096696\n",
+      "===P-Value===: 0.0004098425861096696\n",
       "\n",
-      "Degrees of Freedom: 6\n",
+      "===Degrees of Freedom===: 6\n",
       "\n",
-      "Contingency Table:\n",
+      "===Contingency Table===:\n",
       " [[ 80.53846154  80.53846154 107.38461538  80.53846154]\n",
       " [ 34.84615385  34.84615385  46.46153846  34.84615385]\n",
       " [ 34.61538462  34.61538462  46.15384615  34.61538462]]\n"
@@ -292,45 +419,40 @@
     }
    ],
    "source": [
-    "# Verify this value and calculate the associated p value [3]\n",
-    "\n",
-    "# import packages\n",
-    "import numpy as np\n",
-    "from scipy import stats\n",
-    "\n",
-    "# create arrays to store data\n",
-    "white_collar = [90, 60, 104, 95]\n",
-    "blue_collar = [30, 50, 51, 20]\n",
-    "no_collar = [30, 40, 45, 35]\n",
-    "\n",
-    "data = np.array([white_collar, blue_collar, no_collar])\n",
+    "# Perform Chi2 test and assign correct variables [4]\n",
     "\n",
     "chi2_stat, p_val, dof, ex = stats.chi2_contingency(data)\n",
     "\n",
-    "print(f\"Chi2 Stat: {chi2_stat}\\n\")\n",
-    "print(f\"P-Value: {p_val}\\n\")\n",
-    "print(f\"Degrees of Freedom: {dof}\\n\")\n",
-    "print(f\"Contingency Table:\\n {ex}\")"
+    "print(f\"===Chi2 Stat===: {chi2_stat}\\n\")\n",
+    "print(f\"===P-Value===: {p_val}\\n\")\n",
+    "print(f\"===Degrees of Freedom===: {dof}\\n\")\n",
+    "print(f\"===Contingency Table===:\\n {ex}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ref:\n",
-    "\n",
-    "[1] http://onlinestatbook.com/2/chi_square/distribution.html\n",
-    "\n",
-    "[2]  https://docs.scipy.org/doc/numpy-1.15.0/reference/generated/numpy.random.chisquare.html#numpy.random.chisquare\n",
-    "\n",
-    "[3] https://towardsdatascience.com/running-chi-square-tests-in-python-with-die-roll-data-b9903817c51b"
+    "<br/>\n",
+    "From the results it can be seen that the Chi-squared value is approximately 24.6, the same value that was mentioned at the beginning of the task. The p-value is very low at 0.0004098425861096696. A p-value less than 0.05 is considered to be statistically significant and a p-value less than 0.001 to be highly significant [5]. The p-value in this case is even lower at 0.0004 meaning we can reject the null hypotheses that the categories are independent of each other. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br/>"
+    "#### References:\n",
+    "\n",
+    "[1]. http://onlinestatbook.com/2/chi_square/distribution.html\n",
+    "\n",
+    "[2]. https://docs.scipy.org/doc/numpy-1.15.0/reference/generated/numpy.random.chisquare.html#numpy.random.chisquare\n",
+    "\n",
+    "[3]. https://stackoverflow.com/questions/18022845/pandas-index-column-title-or-name/60909202#60909202 \n",
+    "\n",
+    "[4]. https://towardsdatascience.com/running-chi-square-tests-in-python-with-die-roll-data-b9903817c51b\n",
+    "\n",
+    "[5]. https://www.statsdirect.com/help/basics/p_values.htm\n",
+    "*******************************************************************************************************************************"
    ]
   },
   {
@@ -341,6 +463,7 @@
     "\n",
     "## Task 3 - Standard Deviation\n",
     "\n",
+    "#### Task\n",
     "The standard deviation of an array of numbers x is\n",
     "calculated using numpy as np.sqrt(np.sum((x - np.mean(x))**2)/len(x)).\n",
     "However, Microsoft Excel has two different versions of the standard deviation\n",
@@ -357,6 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Solution\n",
     "The standard deviation is a measure of the amount of variance or dispersion of a dataset relative to its mean. It is used to evaluate how far the data is spread from the mean of the data sample and it is calculated as the square root of the variance. A high deviation within the data set means the data points are further from the mean, meaning the more spread out the data is then the higher the standard deviation. A low standard deviation indicates that the values tend to be close to the mean[1].\n",
     "\n",
     "STDEV.P and STDEV.S are two microsoft excel functions used to calculate the standard deviation. STDEV.P calculates the standard deviation based on the entire population given as an argument. STDEV.P assumes that its arguments are the entire population so if your data represents a sample of the population then compute the standard deviation using STDEV.S. STDEV.S is used to estimate the standard deviation based on a sample of the population[2].\n",
